Closed Bug 1579028 Opened 5 years ago Closed 5 years ago

Crash in mozilla::gl::SharedSurface_SurfaceTexture::Commit during WebGLContext::GetVRFrame() call

Categories

(Core :: Graphics: CanvasWebGL, defect)

All
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: mortimergoro, Assigned: mortimergoro)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → imanol

PresentScreenBuffer() or screen->PublishFrame() may fail for different reasons. In that case we shouldn't call surface->Commit() because it may be in a not swaped state or not available.

Jeff, this is a top crasher in Firefox Reality and we are really hoping to get it into an upcoming release. Your review would be appreciated, thanks.

Flags: needinfo?(jgilbert)
Pushed by igorostizaga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/77a9896062fe
Do not call surface->Commit() if composition failed in WebGLContext::GetVRFrame. r=jgilbert,rbarker
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71

Uplift request to Firefox Beta as this bugfix seems to be fixing (hopefully this is the responsible bugfix) Bug 1588574 .

Flags: needinfo?(jgilbert)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: