Bug 1579028 - Do not call surface->Commit() if composition failed in WebGLContext::GetVRFrame. r=jgilbert,rbarker

PresentScreenBuffer() or screen->PublishFrame() may fail for different reasons. In that case we shouldn't call surface->Commit() because it may be in a not swaped state or not available.

Differential Revision: https://phabricator.services.mozilla.com/D44813

--HG--
extra : moz-landing-system : lando